Fix popover spacing

--- a/src/components/MyAvatar.less
+++ b/src/components/MyAvatar.less
@@ -1,3 +1,9 @@
-.MyAvatar__Text {
-  color: rgba(0, 0, 0, 0.85);
+.MyAvatar {
+  svg {
+    color: rgba(0, 0, 0, 0.85);
+  }
+
+  .MyAvatar__Text {
+    color: rgba(0, 0, 0, 0.85);
+  }
 }
