--- a/src/index.less
+++ b/src/index.less
@@ -4,11 +4,14 @@
 @font-family: NotoSans;
 @code-family: NotoMono;
 @font-size-base: 16px;
-@font-size-lg: @font-size-base + 2px;
 @font-size-sm: 14px;
 
 body {
   width: 100%;
   min-height: 100vh;
   overflow-x: hidden;
+}
+
+.ant-popover-title {
+  padding: 12px 16px;
 }
