--- a/src/layouts/AppLayout.less
+++ b/src/layouts/AppLayout.less
@@ -27,7 +27,13 @@
     }
 
     .AppLayout__Popover {
-      height: 43px;
+      display: inline-block;
+      height: 50px;
+    }
+
+    .AppLayout__Popover--avatar {
+      display: inline-block;
+      height: 46px;
     }
 
     .ant-breadcrumb {
